--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cote",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "keywords": [
     "mesh",
     "network",
@@ -20,24 +20,26 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/dashersw/cote.git"
+    "url": "git://github.com/Loghorn/cote.git"
   },
   "engines": {
     "node": ">=v0.10.0"
   },
   "dependencies": {
-    "axon": "git://github.com/dashersw/axon.git#2.0.2-dash",
-    "charm": "0.1.2",
-    "colors": "0.x.x",
-    "eventemitter2": "0.4.x",
-    "lodash": "2.4.1",
-    "node-discover": "git://github.com/dashersw/node-discover.git#v0.0.18",
-    "node-uuid": "1.4.1",
-    "portfinder": "0.4.0",
-    "socket.io": "1.3.5"
+    "axon": "git://github.com/Loghorn/axon.git",
+    "charm": "^1.0.0",
+    "colors": "^1.1.2",
+    "eventemitter2": "^0.4.14",
+    "lodash": "^3.10.1",
+    "node-discover": "^0.4.0",
+    "node-uuid": "^1.4.3",
+    "portfinder": "^0.4.0"
   },
   "devDependencies": {
-    "humanize-number": "0.0.2",
-    "commander": "2.2.0"
+    "humanize-number": "^0.0.2",
+    "commander": "^2.9.0"
+  },
+  "optionalDependencies": {
+    "socket.io": "^1.3.7"
   }
 }
